fidoconfig 0.91
---------------

----- cvs ci ------
Mon Apr  3 17:39:30 NOVST 2000
max (patch from Serguei Revtov):
* additional checks on carbons

----- cvs ci ------
Sat Apr  1 20:45:39 NOVST 2000
max:
* document tokens LinkGrp & NetArea

----- cvs ci ------
Mon Mar 27 13:28:49 MSD 2000
max (patch from Serguei Revtov):
* pktsize token

----- cvs ci ------
Thu Mar 23 16:10:45 NOVT 2000
max:
* exit to shell after printing error when passthrough + sqush (jam, sdm) used
patch from Serguei:
* -nopack token

----- cvs ci ------
Mon Mar 20 08:56:28 MSK 2000
max (patch from Serguei Revtov):
* change legacy SUN & Win makefiles to compile with new includes, simplifying
* return back default config for "other unixes"

----- cvs ci ------
Sun Mar 19 21:26:41 NOVT 2000
max:
* document areafixkillrequests & frequestfromuplink

----- cvs ci ------
Fri Mar 17 11:52:37 NOVT 2000
max (patch from Serguei Revtov):
* added linkDefaults

----- cvs ci ------
Thu Mar 9 2000 17:42:30 CET
sms:
* installing header files to $INCDIR/fidoconfig

----- cvs ci ------
Thu Mar 9 2000 17:22:10 CET
sms:
* fixed segfault caused by new CFGDIR-code

----- cvs ci ------
Thu Mar  9 10:38:34 NOVT 2000
max:
* dupeBaseType & araesMaxDupeAge in doc

----- cvs ci ------
Mi   8 Mar 2000 00:23:16 CET
tobi:
* the default path of the config file now is not hardwired any more,
  but taken from the CFGDIR huskymak.cfg variable (if set).
  Of course, if using legacy makefiles (makefile.lnx etc.), the default
  is still hardcoded
* changed default for OS/2 etc from c:\\fido to current directory.

----- cvs ci ------
Sun Feb 27 23:17:16 CET 2000
hjk:
* fixed a bug in dump.c and some cosmetical changes

----- cvs ci ------
Mon Feb 25 07:39:41 NOVT 2000
max:
* area->dosfile set under ms-dos now
patch from Alexander Vernigora:
* DupeBaseType { TextDupes | HashDupes | HashDupesWMsgId | CommonDupeBase }
* AreasMaxDupeAge 5 (default) - days limit for common dupe base

----- cvs ci ------
Wed Feb 23 15:00:00 IZH 2000