@@ -24,6 +24,8 @@ void dumpHeader(s_fidoconfig *config, FILE *f)
   if (config->createDirs != 0) fprintf(f, "CreateDirs\n");
   if (config->longDirNames != 0) fprintf(f, "LongDirNames\n");
   if (config->splitDirs != 0) fprintf(f, "SplitDirs\n");
+  fprintf(f, "createAreasCase %s\n", (config->createAreasCase == eLower) ? "Lower" : "Upper");
+  fprintf(f, "areasFileNameCase %s\n", (config->areasFileNameCase == eLower) ? "Lower" : "Upper");
   
   fprintf(f, "\n");
 }
