@@ -306,6 +306,9 @@ int main() {
           printf("\n");
       }
 
+      printf("createAreasCase: %s\n", (config->createAreasCase == eLower) ? "Lower" : "Upper");
+      printf("areasFileNameCase: %s\n", (config->areasFileNameCase == eLower) ? "Lower" : "Upper");
+
       printf("\n=== AREAFIX CONFIG ===\n");
 	  printf("areafixFromPkt: %s\n",(config->areafixFromPkt) ? "on": "off");
 	  printf("areafixKillReports: %s\n",(config->areafixKillReports)?"on":"off");
